gitignore css folder

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 	<div class="bebe-cows">
-		<section class="bebe-cows__container">
-			<header class="bebe-cows__header">
-				<a href="" class="bebe-cows__picture"><img src="http://majadc.com/nijanawia-content/uploads/2023/02/bebe.jpg" alt="Bernardo Belloto"></a>
-				<div class="bebe-cows__header--wrapper">
+		<section class="bebe-cows-container">
+			<header class="bebe-cows-header">
+				<div class="bebe-cows__picture">
+					<a href="https://pl.wikipedia.org/wiki/Bernardo_Bellotto" title="Bernardo Bellotto" class="bebe-cows__picture"><img src="http://majadc.com/nijanawia-content/uploads/2023/02/bebe.jpg" alt="Bernardo Belloto"></a>
+				</div>
+				<div class="bebe-cows__title">
 					<h2>Bernardo... Who he was? What did he know?</h2>
 					<h3>Now we are aware... they are among us.</h3>
 				</div>
