feat refractor bem

--- a/index.html
+++ b/index.html
@@ -4,63 +4,63 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style_bebe_cows.css">
+	<link rel="stylesheet" href="css/style_bebe-cows.css">
 	<title>BeBe Cows</title>
 </head>
 <body>
 	<div class="bebe-cows">
 		<section class="bebe-cows-container">
 			<header class="bebe-cows-header">
-				<div class="bebe-cows__picture">
-					<a href="https://pl.wikipedia.org/wiki/Bernardo_Bellotto" title="Bernardo Bellotto" class="bebe-cows__picture"><img src="http://majadc.com/nijanawia-content/uploads/2023/02/bebe.jpg" alt="Bernardo Belloto"></a>
+				<div class="bebe-cows-header__picture">
+					<a href="https://pl.wikipedia.org/wiki/Bernardo_Bellotto" title="Bernardo Bellotto" class="bebe-cows-header__picture"><img src="http://majadc.com/nijanawia-content/uploads/2023/02/bebe.jpg" alt="Bernardo Belloto"></a>
 				</div>
-				<div class="bebe-cows__title">
+				<div class="bebe-cows-header__title">
 					<h2>Bernardo... Who he was? What did he know?</h2>
 					<h3>Now we are aware... they are among us.</h3>
 				</div>
 			</header>
-			<div class="bebe-cows__gallery">
-				<figure class="bebe-cows__item">
+			<div class="bebe-cows-gallery">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-1.jpg" alt="The Fortress of Königstein from the North">
 					<figcaption><a href="https://www.nationalgallery.org.uk/paintings/bernardo-bellotto-the-fortress-of-konigstein-from-the-north" title="The Fortress of Königstein from the North">The Fortress of Königstein from the North</a></figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-2.jpg" alt="Łaba pomiędzy Pillnitz a Pirną">
 					<figcaption>Łaba pomiędzy Pillnitz a Pirną</figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-8.jpg" alt="The Fortress of Königstein">
 					<figcaption><a href="https://www.nga.gov/collection/art-object-page.80924.html" title="The Fortress of Königstein">The Fortress of Königstein</a></figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-3.jpg" alt="Das kaiserliche Lustschloß Schloss Hof, Ansicht von Norden">
 					<figcaption><a href="https://www.khm.at/objektdb/detail/210/?offset=8&lv=list" title="Das kaiserliche Lustschloß Schloss Hof, Ansicht von Norden">Das kaiserliche Lustschloß Schloss Hof, Ansicht von Norden</a></figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-9.jpg" alt="Dresden vom linken Elbufer unterhalb der Festungswerke">
 					<figcaption><a href="https://skd-online-collection.skd.museum/Details/Index/187388" title="Dresden vom linken Elbufer unterhalb der Festungswerke">Dresden vom linken Elbufer unterhalb der Festungswerke</a></figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-4.jpg" alt="Widok Warszawy z pałacem Ordynackim">
 					<figcaption><a href="https://www.zamek-krolewski.pl/en/node/620" title="Widok Warszawy z pałacem Ordynackim">Widok Warszawy z pałacem Ordynackim</a></figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-10.jpg" alt="Die Ruine Theben an der March">
 					<figcaption><a href="https://www.khm.at/objektdb/detail/211/?offset=0&lv=list" title="Die Ruine Theben an der March">Die Ruine Theben an der March</a></figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-5.jpg" alt="Capriccio z kasycznymi i sarożytnymi motywami oraz budynkami Drezena">
 					<figcaption>Capriccio z kasycznymi i sarożytnymi motywami oraz budynkami Drezena</figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-6.jpg" alt="Architektura fanastyczna z Chrystusem wypędzającym przekupniów ze świątyni">
 					<figcaption>Architektura fanastyczna z Chrystusem wypędzającym przekupniów ze świątyni</figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-7.jpg" alt="Widok Ujazdowa i Łazienek">
 					<figcaption>Widok Ujazdowa i Łazienek</figcaption>
 				</figure>
-				<figure class="bebe-cows__item">
+				<figure class="bebe-cows-gallery__item">
 					<img src="http://majadc.com/nijanawia-content/uploads/2023/02/bernardo-belotto-11.jpg" alt="Pałac w Wilanowie od strony wjazdu">
 					<figcaption><a href="https://www.zamek-krolewski.pl/en/node/620" title="Pałac w Wilanowie od strony wjazdu">Pałac w Wilanowie od strony wjazdu</a></figcaption>
 				</figure>
