--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <a href="https://pl.wikipedia.org/wiki/Bernardo_Bellotto" title="Bernardo Bellotto" class="bebe-cows-header__picture"><img src="http://majadc.com/nijanawia-content/uploads/2023/02/bebe.jpg" alt="Bernardo Belloto"></a>
         </div>
         <div class="bebe-cows-header__title">
-          <h2>Bernardo... Who he was? What did he know?</h2>
-          <h3>Now we are aware... they are among us.</h3>
+          <h2>Bernardo... Who was he? What did he know?</h2>
+          <h3>Now we know... they are among us.</h3>
         </div>
       </header>
       <div class="bebe-cows-gallery">
