--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
             </figcaption>
           </figure>
         </div>
+        <footer class="bebe-cows-footer">
+          <p><a href="https://majadc.github.io/bebe-cows/">GitHub</a></p>
+        </footer>
       </section>
     </div>
   </body>
